--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 * Divio AG (divio.ch) https://github.com/divio/
 * Stefan Foulis <stefan@foulis.ch> https://github.com/stefanfoulis
+
+* Maciek Jabłoński https://github.com/maciekjablonski
